--- a/FriendStagram/Main.storyboard
+++ b/FriendStagram/Main.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="E3b-tt-ls4">
-                                <frame key="frameInset" minY="44" width="414" height="643"/>
+                                <frame key="frameInset" width="414" height="687"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hbA-yH-dfi">
@@ -127,24 +127,18 @@
                                     </subviews>
                                 </collectionReusableView>
                             </collectionView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a8m-od-pes">
-                                <frame key="frameInset" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Profile" id="IpX-AG-TxW"/>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" selectedImage="user" id="caH-De-egQ"/>
+                    <navigationItem key="navigationItem" title="Profile" id="WGr-uB-puj"/>
                     <connections>
                         <outlet property="collectionView" destination="E3b-tt-ls4" id="utd-8k-tdS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cz3-jM-bXv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="317.39130434782612" y="457.33695652173918"/>
+            <point key="canvasLocation" x="1121.7391304347827" y="468.75000000000006"/>
         </scene>
         <!--Image View Controller-->
         <scene sceneID="Vy9-0O-TFx">
@@ -158,15 +152,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9vX-cs-xFK">
-                                <frame key="frameInset" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Photo" id="vzk-UM-bR3">
-                                        <barButtonItem key="backBarButtonItem" title="yes" id="dEF-kV-SMe"/>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m4x-8i-rPu">
                                 <frame key="frameInset" minX="20" minY="131" width="374" height="394"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -178,14 +163,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MxT-kg-ZKZ">
-                                <frame key="frameInset" minX="184" minY="615" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="testing:" destination="vbV-O5-2BT" eventType="touchUpInside" id="PiC-QD-rYj"/>
-                                </connections>
-                            </button>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2MH-mh-I7E">
+                                <frame key="frameInset" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Picture" id="Kqs-C0-1oQ"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -196,7 +180,24 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VOA-Nf-Bct" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1071.0144927536232" y="456.52173913043481"/>
+            <point key="canvasLocation" x="1907" y="469"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="RNm-nh-ThW">
+            <objects>
+                <navigationController id="g1B-C2-aNG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="oSI-cn-k6u"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="79l-ne-3Bz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="fmY-qE-zrg" kind="relationship" relationship="rootViewController" id="Qt8-76-kyM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g7e-E7-tOv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="319" y="469"/>
         </scene>
         <!--Feed-->
         <scene sceneID="mzR-mK-V0S">
@@ -252,7 +253,7 @@
                                 </prototypes>
                             </tableView>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kjO-R8-J0f">
-                                <frame key="frameInset" minX="-0.5" height="44" maxX="0.5"/>
+                                <frame key="frameInset" minX="-0.5" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="FriendStagram" id="P2h-AN-flg"/>
@@ -291,7 +292,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="BJt-8D-ZvX" kind="relationship" relationship="viewControllers" id="Dz4-UA-pVh"/>
-                        <segue destination="fmY-qE-zrg" kind="relationship" relationship="viewControllers" id="oxR-h6-x2B"/>
+                        <segue destination="g1B-C2-aNG" kind="relationship" relationship="viewControllers" id="Uu4-My-HrF"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wqt-Df-1pI" userLabel="First Responder" sceneMemberID="firstResponder"/>
